got everything working

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                   </p>
                   <a
                      class="btn btn-primary btn-lg"
-                     href="/reservation"
+                     href="/reservations"
                      role="button"
-                     >View Tables</a
+                     >Make Reservation</a
                   >
                   <a class="btn btn-danger btn-lg" href="/tables" role="button"
-                     >Make Reservation</a
+                     >View Tables</a
                   >
                </div>
             </div>
