updated icons, updated titles

--- a/tables.html
+++ b/tables.html
@@ -3,7 +3,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-      <title>Document</title>
+      <title>Tables</title>
       <link
          rel="stylesheet"
          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -25,6 +25,10 @@
          integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
          crossorigin="anonymous"
       ></script>
+      <script
+         src="https://kit.fontawesome.com/953989bd4b.js"
+         crossorigin="anonymous"
+      ></script>
    </head>
    <body>
       <div class="container">
@@ -40,10 +44,11 @@
                      class="btn btn-primary btn-lg"
                      href="/reservations"
                      role="button"
-                     >Make Reservation</a
+                  >
+                     <i class="fas fa-calendar-alt"></i> Make Reservation</a
                   >
                   <a class="btn btn-danger btn-lg" href="/tables" role="button"
-                     >View Tables</a
+                     ><i class="fas fa-concierge-bell"></i> View Tables</a
                   >
                </div>
             </div>
