--- a/reservations.html
+++ b/reservations.html
@@ -135,6 +135,7 @@
                .then(response => {
                   console.log(response);
                });
+            alert("You've been put on the list!");
          });
       </script>
       <!-- <script src="./assets/js/tables.js"></script> -->
