added public folder, moved JS to that folder

--- a/reservations.html
+++ b/reservations.html
@@ -114,7 +114,6 @@
          crossorigin="anonymous"
       ></script>
       <!-- custom -->
-      <script type="text/javascript">
          const submitBtn = document.getElementById("submit-btn");
 
          submitBtn.addEventListener("click", () => {
@@ -137,7 +136,7 @@
                });
             alert("You've been put on the list!");
          });
-      </script>
-      <!-- <script src="./assets/js/tables.js"></script> -->
+      </script> -->
+      <script src="./public/js/addReservations.js"></script>
    </body>
 </html>
