fixed paths for public folder

--- a/tables.html
+++ b/tables.html
@@ -76,6 +76,6 @@
          crossorigin="anonymous"
       ></script>
       <!-- custom -->
-      <script src="./public/js/viewTables.js"></script>
+      <script src="/js/viewTables.js"></script>
    </body>
 </html>
